--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "build": "webpack --config",
+    "build": "webpack",
     "deploy": "git add . && git commit && git push origin main && git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/gingrase/kanplyTodo#readme",
   "devDependencies": {
     "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
+    "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
